// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Arrow  should match the snapshot  1`] = `
<DocumentFragment>
  .c0 {
  top: 0.375rem;
  width: 4.75rem;
  height: 1.125rem;
  margin-top: -1.0625rem;
  position: absolute;
  font-size: 1.125rem;
}

.c0.c0:before {
  border: 0.0625rem solid #9e9e9e;
  border-bottom: none;
  border-left: none;
  width: 1.375rem;
  height: 1.375rem;
  margin: auto;
  content: "";
  display: block;
  background: #f7f7f7;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  -webkit-transform: rotate(-45deg);
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`Arrow  should match the snapshot when rtl 1`] = `
<DocumentFragment>
  .c0 {
  top: 0.375rem;
  width: 4.75rem;
  height: 1.125rem;
  margin-top: -1.0625rem;
  position: absolute;
  font-size: 1.125rem;
}

.c0.c0:before {
  border: 0.0625rem solid #9e9e9e;
  border-bottom: none;
  border-right: none;
  width: 1.375rem;
  height: 1.375rem;
  margin: auto;
  content: "";
  display: block;
  background: #f7f7f7;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  -webkit-transform: rotate(-45deg);
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`Popper :  should match the snapshot  1`] = `<DocumentFragment />`;

exports[`Popper :  should match the snapshot with different props 1`] = `<DocumentFragment />`;
